--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="/src/static/css/styles.css" rel="stylesheet">
+    <link href="/static/css/styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="container d-flex align-items-center min-vh-100">
@@ -28,7 +28,7 @@
         </div>
     </div>
     <!-- Include external JavaScript file -->
-    <script src="/src/static/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
